* Thu Mar 07 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 2.3.1-0
- Update the upper bound of stdlib to < 6.0.0
- Update a URL in the README.md

* Mon Sep 10 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 2.3.0-0
- Update Hiera 4 to Hiera 5

* Mon Jul 09 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 2.3.0-0
- Adds a `selinux_login` custom type that provides for the management of login
  to user role mappings.
- Incorporated the fork of the `voxpupuli-selinux` module as `simp-vox_selinux`
  without conflict
- Add support for OEL and Puppet 5
- Fix bug with enforcement switching in the native type

* Mon Apr 23 2018 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 2.2.0-0
- simp_options::selinux was supposed to indicate if the selinux module should
  be included. Class include lists set in the simp module would include selinux
  regardless of this setting.  This option was also being used to set the state
  of selinux.  This caused confusion so  simp_options::selinux setting was
  removed.  The selinux state, set by the ensure parameter, is defaulted to
  'enforcing'.  This will result in the same behavior as if simp_options::selinux
  was set to true.  See the pupmod-simp-simp module to see which scenarios
  include selinux by default.

* Thu Dec 07 2017 Steven Pritchard <steven.pritchard@onyxpoint.com> - 2.1.2-0
- Update README.md from puppet strings

* Fri Sep 15 2017 Nick Miller <nick.miller@gmail.com> - 2.1.1-0
- Add message to reboot notify

* Wed Jul 12 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 2.1.0-0
- Rework manifests to ensure mcstrans and restorecond services are not
  running when selinux is disabled.
- Allow this module to manage restorecond package installation.

* Wed Apr 26 2017 Nick Miller <nick.miller@onyxpoint.com> - 2.1.0-0
- Moved management of mcstrans and restorecond to the selinux module
- Change default packages ensure to use the catalyst
- Update puppet requirement in metadata.json
